# timber

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  TODO  readme.md  readme.txt  version.cmake
.github/workflows/: build-test.yml
bindings/python/: MANIFEST.in  _timber.c  pyproject.toml  setup.py
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: api.md  format.md  getting_started.md  intro.md
docs/docs/installation/: c++.md  c.md  python.md
docs/src/css/: custom.css
examples/: 01-default_logger.c  01-header_only.c  02-graylog.c  02-simple-logger.c  02-simple_logger.c  03-config.c  03-config.toml  03-custom_sink.c  03-graylog.c  03-logger_registry.c  04-custom_sink_w_data.c  05-custom-formatter.c  CMakeLists.txt  bench.c  default.cfg  header_only.c  simple.c
include/: lib.h  tmb.h
include/tmb/: formats.h  sink.h  tmb.h
library_config/: Config.cmake.in  libtimber.pc.in  libtmb.pc.in
src/: chips.c  chips.h  config.c  config.h  config_interlal.h  format.c  format.h  formats.c  formatter.c  formatter.h  init.c  internal.c  internal.h  lib.c  logger.c  sink.c  sink.h  sink_internal.h  stb_sprintf.h  stopwatch.c  tmb.c  tmb_internal.h  tmb_lib.c  tmb_lib.h
src/config/: lex.c  lex.h
src/formats/: graylog.c  json.c
src/sinks/: buffer.c  fd.c  file.c  graylog.c  null.c  rotating_file.c
tests/: .gitignore  CMakeLists.txt  a_test.c  aaaa.c  can_import_test.c  can_read_version_spec_test.c  color_test.c  config_test.c  da_test.c  format_test.c  hash_map_test.c  lexer_test.c  sb_test.c  stopwatch_test.c  string_hash_map_test.c  string_justing_test.c  string_truncate_test.c  sv_cmp_test.c
tests/lib/: tmb_test.c  tmb_test.h
